--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,14 @@ li a:hover{
 }
 img{
 	border-radius:30%;
+	position:relative;
+	overflow: hidden;
+    transition-duration: 3s;
+    transition-property: transform;
+}
+img:hover {
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
 }
 hr{
 	padding-bottom:30px;
